fix: made sections visible

--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -1,7 +1,7 @@
 .footer-wrapper{
     @include wrapper();
     padding: 0;
-    display: none;
+
 }
 .footer-container{
     margin-top: 136px;
