--- a/scss/layout/products.scss
+++ b/scss/layout/products.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    display: none;
+
     h2{
         font-family: 'Montserrat';
 font-style: normal;
