--- a/scss/layout/review.scss
+++ b/scss/layout/review.scss
@@ -1,5 +1,5 @@
 .review-container{
-    display: none;
+
     margin-top: 100px;
     padding: 130px 230px 97px 230px;
     background: url(../../assets/icons/review-background/Group\ 21.png) no-repeat 93.8% 1%,
